[gd_scene load_steps=3 format=3 uid="uid://chcbqj0scxxyw"]

[ext_resource type="Script" uid="uid://c40fyjq3oda1u" path="res://Scenes/ui/deck_selector.gd" id="1_nnr42"]
[ext_resource type="PackedScene" uid="uid://bnnfg3ece55j8" path="res://Scenes/ui/card_pile_view.tscn" id="2_jbdo8"]

[node name="DeckSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nnr42")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.682353)

[node name="CardPileView" parent="." instance=ExtResource("2_jbdo8")]
unique_name_in_owner = true
layout_mode = 1
offset_bottom = -27.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 117.0
offset_right = 256.0
offset_bottom = 144.0

[node name="SelectionsLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="UpgradeButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Upgrade
"

[node name="RemoveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Remove
"
